--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,24 @@
-<ion-header>
-  <ion-navbar>
-    <button ion-button menuToggle>
-      <ion-icon name="menu"></ion-icon>
-    </button>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
-
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+    <img src="assets/imgs/logo.png" alt="logo">
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+
+  <h1>EMBALAGENS</h1>
+  <h6>DIRETO DE FÁBRICA</h6>
+
+
+<form>
+  <ion-item>
+      <ion-label stacked>E-mail</ion-label>
+      <ion-input type="Text"></ion-input>
+  </ion-item>
+  <ion-item>
+      <ion-label stacked>Senha</ion-label>
+      <ion-input type="Password"></ion-input>
+  </ion-item>
+  <button ion-button block (click)="login()">Entrar</button>
+</form>
+
+<button ion-button block outline>Cadastre-se</button>
+
 </ion-content>
