--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -17,5 +17,12 @@
 </ion-header>
 
 <ion-content padding>
-  <p>Pagina de categorias</p>
+  <ion-list>
+    <button ion-item *ngFor="let item of items">
+      <ion-thumbnail item-start>
+        <img src="assets/imgs/logo.png" alt="logo">
+      </ion-thumbnail>
+      <h2> {{ item.nome }} </h2>
+    </button>
+  </ion-list>
 </ion-content>
