--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -10,11 +10,11 @@
 <form>
   <ion-item>
       <ion-label stacked>E-mail</ion-label>
-      <ion-input type="Text"></ion-input>
+      <ion-input [(ngModel)]="creds.email" name="email" type="text"></ion-input> 
   </ion-item>
   <ion-item>
       <ion-label stacked>Senha</ion-label>
-      <ion-input type="Password"></ion-input>
+      <ion-input [(ngModel)]="creds.senha" name="senha" type="password"></ion-input>  
   </ion-item>
   <button ion-button block (click)="login()">Entrar</button>
 </form>
