--- a/src/pages/categorias/categorias.html
+++ b/src/pages/categorias/categorias.html
@@ -1,18 +1,9 @@
-<!--
-  Generated template for the CategoriasPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+<<ion-header>
   <ion-navbar>
-
-    <button oin-button menutoggle>
+    <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-
     <ion-title>Categorias</ion-title>
-
   </ion-navbar>
 </ion-header>
 
