Pagina de cadastro

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -19,6 +19,5 @@
   <button ion-button block (click)="login()">Entrar</button>
 </form>
 
-<button ion-button block outline>Cadastre-se</button>
-
+<button ion-button block outline (click)="signup()">Cadastre-se</button>
 </ion-content>
